Deploy Cloud Run

--- a/deploy-cloud-run/action.yaml
+++ b/deploy-cloud-run/action.yaml
@@ -10,9 +10,9 @@ inputs:
     required: true
     description: Cloud run service name
   
-  container:
-    required: true
-    description: Cloud run service container name
+  # container:
+  #   required: true
+  #   description: Cloud run service container name
 
   google-login:
     required: true
