--- a/deploy-cloud-run/action.yaml
+++ b/deploy-cloud-run/action.yaml
@@ -10,9 +10,9 @@ inputs:
     required: true
     description: Cloud run service name
   
-  # container:
-  #   required: true
-  #   description: Cloud run service container name
+  region:
+    required: true
+    description: Cloud run service region
 
   google-login:
     required: true
@@ -46,5 +46,7 @@ runs:
       with:
         service: '${{ inputs.service }}'
         image: '${{ inputs.image }}'
+        region: '${{ inputs.region }}'
+
         
 
