Updated pipeline to utilize nx

--- a/docker-login-build-push/action.yaml
+++ b/docker-login-build-push/action.yaml
@@ -1,70 +1,62 @@
-name: Docker login, build & push action
-description: Docker composite that does the login into Google AR, builds and pushes the docker image to AR
+name: Nx Docker Build & Push
+
+description: Build and push Docker images using Nx and GCP Artifact Registry.
 
 inputs:
+  project:
+    required: true
+    description: Name of the Nx project to build
+
   image:
     required: true
-    description: Docker image name
-  
-  context:
-    required: true
-    default: "."
-    description: Docker build context
-  
-  dockerfile:
-    required: true
-    default: "Dockerfile"
-    description: Dockerfile name & path
+    description: Full image name (e.g. gcr.io/project-id/image-name:tag)
 
-  args:
+  google-region:
     required: true
-    default: ""
-    description: Docker args
+    description: GCP region (e.g. us-central1)
 
-  google-region: 
-    required: true
-    description: Google Project Region
-  
   google-credentials:
     required: true
-    description: Google Credentials for AR access
+    description: GCP service account key in JSON format
 
   push:
-    required: true
+    required: false
     default: "true"
-    description: Docker push
-
-outputs:
-  image:
-    description: Image built by this action
-    value: ${{ inputs.image }}
+    description: Whether to push the image (true/false)
 
 runs:
-  using: composite
+  using: "composite"
   steps:
-    - name: Google Auth
+    - name: Authenticate with Google Cloud
       id: auth
-      uses: 'google-github-actions/auth@v2'
+      uses: google-github-actions/auth@v2
       with:
         token_format: 'access_token'
         credentials_json: '${{ inputs.google-credentials }}'
-        
 
-    - name: Docker Auth
-      id: docker-auth
-      uses: 'docker/login-action@v3'
+    - name: Docker Login to GCP Artifact Registry
+      uses: docker/login-action@v3
       with:
-        username: 'oauth2accesstoken'
-        password: '${{ steps.auth.outputs.access_token }}'
         registry: '${{ inputs.google-region }}-docker.pkg.dev'
-    
-    - name: Docker Build
-      id: docker-build
+        username: oauth2accesstoken
+        password: '${{ steps.auth.outputs.access_token }}'
+
+    - name: Install Nx CLI (if not using container-based job)
+      run: npm install -g nx
       shell: bash
-      run: docker build ${{ inputs.args }} -t '${{ inputs.image }}' -f ${{ inputs.dockerfile }} ${{ inputs.context }}
-    
-    - name: Docker Push
-      id: docker-push
+
+    - name: Build Docker image with Nx Container
+      run: |
+        npx nx run ${{ inputs.project }}:container
+      shell: bash
+
+    - name: Tag Docker Image
+      run: |
+        docker tag ${{ inputs.project }} ${{ inputs.image }}
+      shell: bash
+
+    - name: Push Docker Image
       if: ${{ inputs.push == 'true' }}
+      run: |
+        docker push ${{ inputs.image }}
       shell: bash
-      run: docker push '${{ inputs.image }}'
