--- a/nx-pnpm-setup/action.yaml
+++ b/nx-pnpm-setup/action.yaml
@@ -62,7 +62,7 @@ runs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ inputs.node-version }}
-        cache: 'npm'
+        cache: ${{ inputs.node-cache }}
         cache-dependency-path: ${{ inputs.node-cache-dependency-path }}
 
     - name: Install dependencies
