Adding Nx setup & Nx docker build

--- a/nx-docker-build-push/action.yaml
+++ b/nx-docker-build-push/action.yaml
@@ -8,6 +8,15 @@ inputs:
     description: Nx plugin that is going to be run to build the images
     default: container
 
+  run-affected:
+    required: true
+    default: 'true'
+    description: Run only affected applications
+
+  base-branch:
+    required: true
+    description: Base branch to check changed files
+
   application:
     required: true
     description: Name of the Nx application to build using target
@@ -54,5 +63,11 @@ runs:
     - uses: actions/checkout@v4
 
     - name: Build affected projects using Nx target
+      if: ${{ inputs.run-affected == 'true' }}
+      shell: bash
+      run: nx affected --base=${{ inputs.base_branch }} --head=HEAD -t ${{ inputs.plugin }}:${{ inputs.target }}
+
+    - name: Build affected projects using Nx target
+      if: ${{ inputs.run-affected != 'true' }}
       shell: bash
       run: nx affected -t ${{ inputs.plugin }}:${{ inputs.target }}
