--- a/nx-pnpm-setup/action.yaml
+++ b/nx-pnpm-setup/action.yaml
@@ -70,7 +70,7 @@ runs:
 
     - name: Install dependencies
       shell: bash
-      if: ${{ inputs.install-dependecies == 'true' }}
+      if: ${{ inputs.install-dependencies == 'true' }}
       run: pnpm install
 
 
