--- a/nx-docker-build-push/action.yaml
+++ b/nx-docker-build-push/action.yaml
@@ -32,15 +32,13 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
     - name: Docker Login to GCP Artifact Registry
       uses: docker/login-action@v3
       with:
         registry: ${{ inputs.google-region }}-docker.pkg.dev
         username: _json_key
         password: ${{ inputs.google-credentials }}
+        ecr: false
 
     - uses: nrwl/nx-set-shas@v4
       with:
