--- a/nx-affected/action.yaml
+++ b/nx-affected/action.yaml
@@ -46,4 +46,4 @@ runs:
       shell: bash
       env:
         NX_NO_CLOUD: ${{ inputs.use-nx-cloud == 'false' }}
-      run: nx affected --base '${{ inputs.base }}' --head '${{ inputs.head }}' --target='${{ inputs.target }}' ${{ inputs.args }}
+      run: nx affected --target='${{ inputs.target }}' ${{ inputs.args }}
