--- a/nx-affected/action.yaml
+++ b/nx-affected/action.yaml
@@ -31,6 +31,11 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
     - name: Docker Login to GCP Artifact Registry
       uses: docker/login-action@v3
       with:
@@ -41,6 +46,7 @@ runs:
     - uses: nrwl/nx-set-shas@v4
       with:
         main-branch-name: ${{ inputs.base }}
+        last-successful-event: ${{ input.last-successful-event }}
 
     - name: Build affected projects using Nx configuration
       shell: bash
