--- a/nx-affected/action.yaml
+++ b/nx-affected/action.yaml
@@ -46,6 +46,9 @@ runs:
     - uses: nrwl/nx-set-shas@v4
       with:
         main-branch-name: ${{ inputs.base }}
+    
+    - name: Checkout
+      uses: actions/checkout@v4
 
     - name: Build affected projects using Nx configuration
       shell: bash
