--- a/nx-affected/action.yaml
+++ b/nx-affected/action.yaml
@@ -113,6 +113,11 @@ runs:
       shell: bash
       run: pnpm install --frozen-lockfile
 
+    - name: Setup Nx
+      if: ${{ inputs.setup-nx == 'true' }}
+      shell: bash
+      run: npm install -g nx@${{ inputs.nx-version }}
+
     - uses: nrwl/nx-set-shas@v4
       with:
         main-branch-name: ${{ inputs.base }}
