--- a/argocd-restart-deployments/action.yaml
+++ b/argocd-restart-deployments/action.yaml
@@ -27,4 +27,7 @@ runs:
       curl -sSL -o argocd-linux-amd64 https://github.com/argoproj/argo-cd/releases/download/$VERSION/argocd-linux-amd64
       chmod 555 argocd-linux-amd64
       mv argocd-linux-amd64 /usr/local/bin/argocd
-      rm argocd-linux-amd64
+
+  - name: ArgoCD Version
+    shell: bash
+    run: argocd version --client
