--- a/argocd-restart-deployments/action.yaml
+++ b/argocd-restart-deployments/action.yaml
@@ -4,9 +4,6 @@ description: This action can restart a deployment / all deployments inside a Arg
 inputs:
   install:
     description: Install ArgoCD
-  version:
-    description: ArgoCD client version
-    default: v2.14.10
   cluster:
     description: ArgoCD cluster name that the application belongs to
   application:
@@ -28,11 +25,10 @@ runs:
     shell: bash
     if: ${{ inputs.install == 'true' }}
     env:
-      VERSION: ${{ inputs.version }}
+      ARGOCD_SERVER: ${{ inputs.argocd-server }}
+      ARGOCD_AUTH_TOKEN: ${{ inputs.argocd-auth-token }}
     run: |
-      curl -sSL -o argocd-linux-amd64 https://github.com/argoproj/argo-cd/releases/download/$VERSION/argocd-linux-amd64
-      chmod 555 argocd-linux-amd64
-      mv argocd-linux-amd64 /usr/local/bin/argocd
+      curl -sSL -o /usr/local/bin/argocd https://${ARGOCD_SERVER}/download/argocd-linux-amd64
 
   - name: Restart deployments
     shell: bash
