ArgoCD Restart action

--- a/argocd-restart-deployments/action.yaml
+++ b/argocd-restart-deployments/action.yaml
@@ -29,6 +29,7 @@ runs:
       ARGOCD_AUTH_TOKEN: ${{ inputs.argocd-auth-token }}
     run: |
       curl -sSL -o /usr/local/bin/argocd https://${ARGOCD_SERVER}/download/argocd-linux-amd64
+      chmod +x /usr/local/bin/argocd
 
   - name: Restart deployments
     shell: bash
