--- a/nx-affected/action.yaml
+++ b/nx-affected/action.yaml
@@ -123,7 +123,7 @@ runs:
     - name: Setup Python
       uses: actions/setup-python@v5
       with:
-        go-version: ${{ inputs.python-version }}
+        python-version: ${{ inputs.python-version }}
 
     - name: Setup pnpm
       uses: pnpm/action-setup@v4
