--- a/nx-affected/action.yaml
+++ b/nx-affected/action.yaml
@@ -116,11 +116,13 @@ runs:
         filter: tree:0
 
     - name: Setup Go
+      if: ${{ inputs.setup-go == 'true' }}
       uses: actions/setup-go@v5
       with:
         go-version: ${{ inputs.go-version }}
 
     - name: Setup Python
+      if: ${{ inputs.setup-python == 'true' }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ inputs.python-version }}
