--- a/deploy-cloud-run/action.yaml
+++ b/deploy-cloud-run/action.yaml
@@ -62,4 +62,4 @@ runs:
 
   - name: Cloud Run Deploy
     shell: bash
-    run: gcloud beta run services update '${{ inputs.service }}' --project ${{ inputs.google-login && steps.auth.outputs.project_id || inputs.google-project-id }} --region '${{ inputs.region }}' --container '${{ inputs.container }}' --image '${{ inputs.image }}'
+    run: gcloud beta run services update '${{ inputs.service }}' --region '${{ inputs.region }}' --container '${{ inputs.container }}' --image '${{ inputs.image }}'
