--- a/deploy-cloud-run/action.yaml
+++ b/deploy-cloud-run/action.yaml
@@ -41,10 +41,12 @@ outputs:
 runs:
   using: composite
   steps:
+  - uses: 'actions/checkout@v4'
+
   - name: Google Auth
     id: auth
     if: ${{ inputs.google-login == 'true' }}
-    uses: 'google-github-actions/auth@v2.1.8'
+    uses: 'google-github-actions/auth@v2'
     with:
       token_format: 'access_token'
       credentials_json: '${{ inputs.google-credentials }}'
