--- a/deploy-cloud-run/action.yaml
+++ b/deploy-cloud-run/action.yaml
@@ -57,4 +57,4 @@ runs:
 
   - name: Cloud Run Deploy
     shell: bash
-    run: gcloud beta run services update --project ${{ steps.auth.outputs.project_id }} '${{ inputs.service }}' --region '${{ inputs.region }}' --container '${{ inputs.container }}' --image '${{ inputs.image }}'
+    run: gcloud beta run services update '${{ inputs.service }}' --region '${{ inputs.region }}' --container '${{ inputs.container }}' --image '${{ inputs.image }}'
