--- a/deploy-cloud-run/action.yaml
+++ b/deploy-cloud-run/action.yaml
@@ -46,8 +46,9 @@ runs:
     if: ${{ inputs.google-login == 'true' }}
     uses: 'google-github-actions/auth@v2'
     with:
-      # token_format: 'access_token'
+      token_format: 'access_token'
       credentials_json: '${{ inputs.google-credentials }}'
+      export_environment_variables: true
 
   - name: 'Set up Cloud SDK'
     if: ${{ inputs.setup-gcloud == 'true' }}
